hphp/hack/test/typecheck/asyncgen5.php.like_types.exp
File "asyncgen5.php", line 8, characters 3-23:
Invalid yield (Typing[4110])
File "asyncgen5.php", line 7, characters 15-47:
Expected ~AsyncGenerator<int, string, void> because it is an unenforceable type
File "asyncgen5.php", line 8, characters 3-23:
But got Generator<int, string, [unresolved]> (result of function with 'yield' in the body)
